# bbot

./: .gitignore  config.py  main.py  pyproject.toml
databaseUtil/: __init__.py  common.py  mongo_database.py  service_mongo_database.py  service_sqlite_database.py  sql_database.py
keyboards/: common_keyboards.py
openAIUtil/: __init__.py  common.py
routers/: __init__.py  admin_handlers.py  book_hanlers.py  states.py  user_handlers.py
routers/comands/: comands.py
routers/sender/: sender.py  sender_util.py
