[tool.poetry]
name = "book-bot"
version = "1.1.2"
description = ""
authors = ["Andrey <dyxa12121@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
openai = "^1.35.15"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
